<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.etechclub.kuchbhi.CompleteConnection"
    android:background="@color/dim_foreground_disabled_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/compeleteConnection_title"
        android:id="@+id/completeConnection_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="54sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/completeConnection_newDevice"
        android:id="@+id/textView3"
        android:layout_below="@+id/completeConnection_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compeleteConnection_name"
        android:id="@+id/completeConnection_name"
        android:layout_marginTop="53dp"

        android:layout_below="@+id/completeConnection_title"
        android:textSize="28sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compeleteConnection_password"
        android:id="@+id/completeConnection_password"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/completeConnection_name"
        android:layout_alignLeft="@+id/completeConnection_name"
        android:layout_alignStart="@+id/completeConnection_name"
        android:textSize="28sp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completeConnection_enterName"
        android:inputType="text"
        android:layout_alignTop="@+id/completeConnection_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:hint="@string/completeConnectionHint_EnterNewName"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completeConnection_enterPassword"
        android:inputType="textPassword"
        android:layout_alignRight="@+id/completeConnection_enterName"
        android:layout_alignEnd="@+id/completeConnection_enterName"
        android:layout_alignBottom="@+id/completeConnection_password"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:hint="@string/completeConnectionHint_SetupNewPassword"
        android:layout_below="@+id/completeConnection_enterName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeConnection_connectButton"
        android:id="@+id/button2"
        android:layout_marginTop="93dp"
        android:layout_below="@+id/completeConnection_password"
        android:layout_centerHorizontal="true" />


</RelativeLayout>